Don't unfocus the rollup buttons when they are focused (and fix the CSS so they no longer have huge focus boxes visible now)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@14063 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/boxes.css
+++ b/share/html/NoAuth/css/web2/boxes.css
@@ -166,18 +166,20 @@
 
 .titlebox .titlebox-title .widget a {
   display: block;
-  padding-top: 0.5em;
+  margin: 0;
+  margin-top: 0.5em;
   width: 20px;
 
   background: url(<%RT->Config->Get('WebPath')%>/NoAuth/images//css/rollup-arrow.gif) no-repeat center center;
-  margin: 0;
-  text-indent: -9999px;
 
   position: absolute;
   top: -1em;
-  left: -0.25em;
+  left: 0.15em;
   float: left;
 
+  padding: 11px 0 0 0;
+  height: 0 !important;
+  overflow: hidden;
 }
 
 * html .titlebox .titlebox-title .widget a {
